Basic client to consume rest api

--- a/src/app/pages/posts/posts.component.html
+++ b/src/app/pages/posts/posts.component.html
@@ -1,3 +1,9 @@
-<p>
-  posts works!
-</p>
+<h1>Posts</h1>
+
+<ul class="list-group">
+  <li class="list-group-item">
+    <h2>Title</h2>
+    <p>Hello Worl!</p>
+  </li>
+
+</ul>
