--- a/src/app/pages/posts/posts.component.html
+++ b/src/app/pages/posts/posts.component.html
@@ -1,9 +1,9 @@
 <h1>Posts</h1>
 
 <ul class="list-group">
-  <li class="list-group-item">
-    <h2>Title</h2>
-    <p>Hello Worl!</p>
+  <li *ngFor="let message of myMessages | async" class="list-group-item">
+    <h2>{{ message.title }}</h2>
+    <p>{{ message.body }}</p>
   </li>
 
 </ul>
