--- a/src/app/pages/posts/posts.component.html
+++ b/src/app/pages/posts/posts.component.html
@@ -1,9 +1,10 @@
 <h1>Posts</h1>
 
 <ul class="list-group">
-  <li *ngFor="let message of myMessages | async" class="list-group-item">
+  <app-post *ngFor="let message of myMessages | async" [message]="message"></app-post>
+ <!--  <li *ngFor="let message of myMessages | async" class="list-group-item">
     <h2>{{ message.title }}</h2>
     <p>{{ message.body }}</p>
-  </li>
+  </li> -->
 
 </ul>
