--- a/src/app/pages/posts/post/post.component.html
+++ b/src/app/pages/posts/post/post.component.html
@@ -1,4 +1,4 @@
-<li class="list-group-item">
+<li (click)="onClick()" class="list-group-item">
     <h2>{{ message.title }}</h2>
     <p>{{ message.body }}</p>
 </li>
