--- a/03-components/src/app/pages/action-sheet/action-sheet.page.html
+++ b/03-components/src/app/pages/action-sheet/action-sheet.page.html
@@ -1,12 +1,6 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
-    </ion-buttons>
-    <ion-title>action-sheet</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header title="Action Sheet Page"></app-header>
 
 <ion-content>
+  <h2>Action Sheet Page</h2>
 
 </ion-content>
