--- a/03-components/src/app/pages/alert/alert.page.html
+++ b/03-components/src/app/pages/alert/alert.page.html
@@ -1,11 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
-    </ion-buttons>
-    <ion-title>alert</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header title="alert page"></app-header>
 
 <ion-content>
 
