--- a/03-components/src/app/pages/action-sheet/action-sheet.page.html
+++ b/03-components/src/app/pages/action-sheet/action-sheet.page.html
@@ -3,4 +3,6 @@
 <ion-content>
   <h2>Action Sheet Page</h2>
 
+  <ion-button expand="full" color="primary" (click)="presentActionSheet()">Show Action Sheet</ion-button>
+
 </ion-content>
