--- a/03-components/src/global.scss
+++ b/03-components/src/global.scss
@@ -24,3 +24,7 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+.my-red-class span, .my-red-class .sc-ion-action-sheet-md {
+    color: red !important;
+}
