Components - ion-alert - simple example

--- a/03-components/src/app/pages/alert/alert.page.html
+++ b/03-components/src/app/pages/alert/alert.page.html
@@ -1,5 +1,10 @@
 <app-header title="alert page"></app-header>
 
 <ion-content>
+    <ion-button expand="true" 
+                color="primary" 
+                (click)="presentAlert()">
+        Show Alert
+    </ion-button>
 
 </ion-content>
