ion-datetime part2

--- a/03-components/src/app/pages/date-time/date-time.page.html
+++ b/03-components/src/app/pages/date-time/date-time.page.html
@@ -17,4 +17,34 @@
     </ion-item>
   </ion-list>
 
+  <ion-list-header>
+    <ion-label>Restrictions</ion-label>
+  </ion-list-header>
+
+  <ion-item>
+    <ion-label>Min and Max</ion-label>
+    <ion-datetime placeholder="yyyy-mm-dd"
+                  displayFormat="YYYY MMMM DD"
+                  min="2017-01-01"
+                  max="2017-05-06">
+    </ion-datetime>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Years</ion-label>
+    <ion-datetime placeholder="YYYY"
+                  displayFormat="YYYY"
+                  min="2017"
+                  max="2030"
+                  value="2020">
+    </ion-datetime>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Custom Date</ion-label>
+    <ion-datetime [pickerOptions]="customPickerOptions"
+                  [(ngModel)]="customDate">
+    </ion-datetime>
+  </ion-item>
+
 </ion-content>
