--- a/03-components/src/app/pages/index/index.page.html
+++ b/03-components/src/app/pages/index/index.page.html
@@ -1,5 +1,12 @@
 <ion-header no-border>
   <ion-toolbar>
+    
+    <ion-buttons slot="start">
+      <ion-button (click)="toggleMenu()">
+        <ion-icon slot="icon-only" name="menu"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
     <ion-title>index</ion-title>
   </ion-toolbar>
 </ion-header>
