--- a/03-components/src/app/pages/index/index.page.html
+++ b/03-components/src/app/pages/index/index.page.html
@@ -2,9 +2,13 @@
   <ion-toolbar>
     
     <ion-buttons slot="start">
-      <ion-button (click)="toggleMenu()">
+      <!-- <ion-button (click)="toggleMenu()">
         <ion-icon slot="icon-only" name="menu"></ion-icon>
-      </ion-button>
+      </ion-button> -->
+
+      <ion-menu-button color="primary"
+                       menu="firstMenu">
+      </ion-menu-button>
     </ion-buttons>
 
     <ion-title>index</ion-title>
