--- a/03-components/src/app/pages/index/index.page.html
+++ b/03-components/src/app/pages/index/index.page.html
@@ -11,14 +11,17 @@
       </ion-menu-button>
     </ion-buttons>
 
-    <ion-title>index</ion-title>
+    <ion-title color="primary">Components</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let c of components" [routerLink]="c.redirectTo" detail>
-      <ion-icon slot="start" [name]="c.icon"></ion-icon>
+    <ion-item *ngFor="let c of components | async" [routerLink]="c.redirectTo" detail>
+      <ion-icon slot="start" 
+                [name]="c.icon"
+                color="primary">
+      </ion-icon>
       <ion-label>{{ c.name }}</ion-label>
     </ion-item>
   </ion-list>
