--- a/03-components/src/app/pages/popover/popover.page.html
+++ b/03-components/src/app/pages/popover/popover.page.html
@@ -7,7 +7,7 @@
     <ion-title>Popover</ion-title>
 
     <ion-buttons slot="end">
-      <ion-button (click)="showPop()">
+      <ion-button (click)="showPop($event)">
         <ion-icon name="contact" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -16,8 +16,8 @@
 
 <ion-content>
 
-    <ion-button (click)="showPop()" expand="full">
-      <ion-icon name="contact" slot="icon-only"></ion-icon>
+    <ion-button (click)="showPop($event)" expand="full">
+      <ion-icon name="contact" slot="start"></ion-icon>
       <ion-label>Popover</ion-label>
     </ion-button>
 
@@ -26,7 +26,7 @@
 <ion-footer>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-button (click)="showPop()">
+      <ion-button (click)="showPop($event)">
         <ion-icon name="contact" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
