--- a/03-components/src/global.scss
+++ b/03-components/src/global.scss
@@ -76,6 +76,31 @@
     animation-name: fadeIn;
 }
 
+@-webkit-keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
+.fadeOut {
+  -webkit-animation-name: fadeOut;
+  animation-name: fadeOut;
+}
+
 @-webkit-keyframes flash {
   from,
   50%,
