--- a/03-components/src/app/app.component.html
+++ b/03-components/src/app/app.component.html
@@ -1,4 +1,27 @@
 <ion-app>
-  <app-menu></app-menu>
-  <ion-router-outlet id="main"></ion-router-outlet>
+  <ion-split-pane when="md" contentId="main">
+    <!-- <app-menu></app-menu> -->
+    <ion-menu side="start" 
+          menuId="firstMenu"
+          contentId="main">
+      <ion-header>
+        <ion-toolbar color="primary">
+          <ion-title>Main Menu</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content>
+        <ion-list>
+          <ion-menu-toggle autoHide="false" *ngFor="let option of menuOptions | async">
+            <ion-item [routerLink]="option.redirectTo">
+              <ion-icon slot="start" [name]="option.icon"></ion-icon>
+              <ion-label>{{ option.name }}</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+
+        </ion-list>
+      </ion-content>
+    </ion-menu>
+    
+    <ion-router-outlet id="main"></ion-router-outlet>
+  </ion-split-pane>  
 </ion-app>
